# nox-decomp

./: CMakeLists.txt  Dockerfile  Dockerfile.x86  Dockerfile.x86libs  README.md  abi_wrappers.c  build.sh
src/: CMakeLists.txt  GAME1.c  GAME2.c  GAME3.c  GAME4.c  GAME5.c  compat.c  compat_mss.c  defs.h  draw.c  movie.c  proto.h  string.c  win.c
